# match-making

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  dagster.yaml  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml
.cursor/rules/: commit-per-change.mdc  use-poetry.mdc
deploy/: dagster-code.service  dagster-daemon.service  setup-remote.sh
docker/: dagster.yaml  entrypoint.sh  init.sql  workspace-local.yaml  workspace.yaml
docs/: Talent Evaluation & Matchmaking System - Interview 2ff1abafe832816da37ff8273354b13d.md  Tech Assignment.csv  dagster-interactivity-controlflow.md  dagster-scheduling-partitions-cancellation.md  dagster-semaphore-fix-pr.md  dagster-termination-thread-semaphore-issue.md  pipeline-concurrency-refactor-plan.md
docs/dagster-principles/: 00-index.md  01-code-versioning.md  02-auto-materialize-policies.md  03-freshness-policies.md  04-sensors.md  05-dynamic-partitions.md  06-cross-join-matching.md  07-llm-cost-tracking.md
docs/plan/: Data Model Overview (Non-Technical).md  Data Model Proposal.md  Data Pipeline Frameworks Why Dagster Over Airflow  252403b4ece14b8cb56a63974c625f95.md  Long-Term Vision Talent Evaluation & Matchmaking P 2ff1abafe83280e690fdfbae6ce0dbba.md  Problem Analysis Talent Evaluation & Matchmaking S 2ff1abafe83280d596e4cb071865c1ff.md  Short-Term Plan Talent Evaluation & Matchmaking MV 2ff1abafe832806bba3ad6a502ee2cca.md  Skills Taxonomy System Proposal.md  airtable-integration-control-flow.md  match-feedback-and-skill-adjustment.md  non-negotiables-hard-filter.md  periodic-skill-normalization-job.md  timezone-lookup-job.md
migrations/: README  env.py
migrations/versions/: 20260212_1325_e14af2d1360d_initial_schema.py  20260213_1145_119428e424c7_add_cv_extraction_fields.py  20260213_1149_b7738458d5b8_add_cv_text_pdf_field.py  20260213_1202_8ad874f86ef5_update_skill_rating_to_1_10_scale.py  20260218_add_match_similarity_scores.py  20260218_add_normalized_job_narratives.py  20260218_employment_type_array_skills_is_requirement.py  20260219_fix_compensation_thousands.py  20260220_add_job_required_skill_expected_capability.py  20260221_add_staff_seniority_enum.py  20260221_widen_vector_type_and_model_version.py  20260226_add_job_required_skill_min_level.py  20260226_add_location_timezones.py  20260226_add_raw_job_projected_salary.py
scripts/: airtable_change_multiselect_to_longtext.py  check_dagster_code_versions.py  check_matchmaking_data.py  create_airtable_normalized_columns.py  create_airtable_normalized_job_columns.py  dagster-remote-ui.sh  force_cancel_dagster_runs.py  inspect_candidate.py  inspect_job.py  inspect_matches.py  migrate-to-remote.sh  run_ats_matchmaking.py  run_matchmaking_scoring.py  test_airtable_fetch.py  test_airtable_upload_single.py  test_pipeline_sample.py
talent_matching/: __init__.py  cli.py  db.py  definitions.py
talent_matching.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
talent_matching/assets/: __init__.py  candidates.py  jobs.py  social.py
talent_matching/io_managers/: __init__.py  pgvector.py  postgres.py
talent_matching/jobs/: __init__.py
tests/: __init__.py  test_airtable.py  test_resources.py
(+48 files in other folders)
